# polyq-core

./: .gitignore  Cargo.toml  LICENSE  README.md
dataset/random_circuit_q27_h10_t5_s10_z25_cz10/: random_circuit_q27_h10_t5_s10_z25_cz10.qasm  random_circuit_q27_h10_t5_s10_z25_cz10_siminfo.json
src/: lib.rs  notes.md  qc.rs  sim.rs
