[package]
name = "PolyQ"
version = "0.1.0"
edition = "2024"

[dependencies]
fixedbitset = "0.4"
num-complex = "0.4"
rayon = "1.8"
flamegraph = "0.6.11"

[profile.release]
opt-level = 3
lto = true
debug = 1        # or 2; 1 is usually enough for function names
codegen-units = 1 # optional, often improves perf consistency
